# dvrip_rs

./: Cargo.toml  LICENSE  README.md  TODO.md
examples/: account_management.rs  alarm_event_logging.rs  alarm_remote_control.rs  alarm_snapshot_on_event.rs  backchannel_audio.rs  config_management.rs  device_info.rs  device_upgrade.rs  ptz_control.rs  realtime_stream.rs  recordings_manager.rs
src/: constants.rs  dvrip.rs  error.rs  lib.rs  protocol.rs
src/commands/: alarm.rs  authentication.rs  backchannel.rs  connection.rs  file_management.rs  mod.rs  monitoring.rs  ptz.rs  system_info.rs  upgrade.rs  user_management.rs
