[package]
name = "dvrip-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
byteorder = "1.5.0"
md5 = "0.8.0"
phf = { version = "0.13.1", features = ["macros"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
