[package]
name = "dvrip-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust library for interacting with DVR-IP devices ported from python-dvr."
license = "MIT"
authors = ["orpos"]
repository = "https://github.com/orpos/dvrip_rs"

[dependencies]
async-trait = "0.1.89"
byteorder = "1.5.0"
md5 = "0.8.0"
phf = { version = "0.13.1", features = ["macros"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dashmap = "6.1.0"
